// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders header 1`] = `
<div>
  <header
    class=""
  >
    <div>
      <div>
        <svg
          class=""
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </g>
        </svg>
      </div>
      <div>
        <img
          alt="logo"
          src="https://cdn.jwplayer.com/images/HXyBCU5N.png"
        />
      </div>
      <nav>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          href="/p/:id"
        >
          <span>
            Playlist
          </span>
        </a>
        <a
          href="/u"
        >
          <span>
            Settings
          </span>
        </a>
      </nav>
      <div />
    </div>
  </header>
</div>
`;

exports[`<Header /> renders headers 1`] = `
<div>
  <header
    class=""
  >
    <div>
      <div>
        <span>
          menu
        </span>
      </div>
      <div>
        <img
          alt="logo"
          src="https://cdn.jwplayer.com/images/HXyBCU5N.png"
        />
      </div>
      <nav>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          href="/one"
        >
          <span>
            One
          </span>
        </a>
        <a
          href="/two"
        >
          <span>
            Two
          </span>
        </a>
      </nav>
    </div>
  </header>
</div>
`;
